--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Gulp Template</title>
+	<title>IndoTravel - путешествие по Индонезии</title>
 
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
@@ -79,7 +79,7 @@
 					<div class="about__content">
 						<div class="about__top">
 							<h2 class="section__title about__title">Индонезия</h2>
-							<p class="about__intro">Незабываемая, чистая красота островов восхищает своей нетронутой природой и&nbsp;культурными традициями.</p>
+							<p class="section__intro about__intro">Незабываемая, чистая красота островов восхищает своей нетронутой природой и&nbsp;культурными традициями.</p>
 							<p class="about__text about__text--first">Величественная Индонезия&nbsp;&mdash; квинтэссенция экзотики: первозданная природа Бали и пляжи с&nbsp;черным песком острова Суматра, дворцы и&nbsp;батик Явы и&nbsp;дождевые леса Калимантана.</p>
 						</div>
 						<div class="slider">
@@ -111,6 +111,70 @@
 						<img src="./img/about/img-3.jpg" alt="" width="380" height="700">
 						<img src="./img/about/img-4.jpg" alt="" width="380" height="507">
 						<img src="./img/about/img-5.jpg" alt="" width="280" height="264">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="travel">
+			<div class="container">
+				<div class="travel__wrapper">
+					<h2 class="section__title travel__title">
+						Путешествие
+					</h2>
+					<p class="section__intro travel__intro">Посети это удивительное место, а мы покажем самые фантастические места.</p>
+					<div class="accordion">
+						<ul class="accordion__wrapper">
+							<li class="accordion__item">
+								<h3 class="accordion__title">
+									<span> День 1-2: Прибытие в Джаккарту (о. Ява)</span>
+								</h3>
+								<div>
+									<p class="accordion__text">
+										Свое путешествие мы&nbsp;начнем со&nbsp;столицы Индонезии&nbsp;&mdash; города Джаккарты. Она огромная, многоликая, многоголосая. В&nbsp;Центральном муниципалитете ждут известные достопримечательности, а&nbsp;в&nbsp;Северном&nbsp;&mdash; рестораны и&nbsp;рынки с&nbsp;морепродуктами. Западные районы&nbsp;хранят память о&nbsp;голландских колонизаторах, а&nbsp;в&nbsp;восточных кипит современная промышленность.
+									</p>
+								</div>
+							</li>
+							<li class="accordion__item">
+								<h3 class="accordion__title">
+									<span> День 3-5: О. Бали</span>
+								</h3>
+								<div>
+									<p class="accordion__text">
+										Природа острова поражает экзотичностью лесов, величием гор и до сих пор действующих вулканов, среди которых самыми живописными считаются Гунунг-Батур и Гунунг-Агунг. Именно сочетание необычной природы и старинных индуистских храмов – прекрасная и уникальная особенность Бали, выделяющая его из других островов Индонезии.
+									</p>
+								</div>
+							</li>
+							<li class="accordion__item">
+								<h3 class="accordion__title">
+									<span> День 6-8: О. Сулавеси</span>
+								</h3>
+								<div>
+									<p class="accordion__text">
+										Сулавеси — настоящий заповедник культур и традиций, а к тому же ещё и просто очень красивый и зелёный остров. Пещерные захоронения, экзотическая природа, заповедник острова Бутон, дайвинг среди коралловых рифов в районе залива Манадо, горные озёра, пышные народные церемонии — всё это привлекает сюда тысячи туристов каждый год.
+									</p>
+								</div>
+							</li>
+							<li class="accordion__item">
+								<h3 class="accordion__title">
+									<span> День 9-11: О. Калимантан</span>
+								</h3>
+								<div>
+									<p class="accordion__text">
+										Калимантан (Борнео)— третий по величине остров в мире; единственный морской остров, разделённый между тремя государствами: Индонезией, Малайзией и Брунеем.
+									</p>
+								</div>
+							</li>
+							<li class="accordion__item">
+								<h3 class="accordion__title">
+									<span> День 12-14: О. Суматра</span>
+								</h3>
+								<div>
+									<p class="accordion__text">
+										Суматра — один из крупнейших островов Индонезии, известный своими протяженными пляжами с темным песком, руинами древних храмовых комплексов и дворцов и нетронутой природой. Вдоль западного побережья Суматры раскинулись горы Барисан, самый высокий пик которых — гора Керинчи (3800 м).
+									</p>
+								</div>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
