datepick and people pick done

--- a/src/index.html
+++ b/src/index.html
@@ -240,19 +240,19 @@
 										<li class="popup__month-item" tabindex="0">Ноябрь 2021</li>
 										<li class="popup__month-item" tabindex="0">Декабрь 2021</li>
 										<li class="popup__month-item" tabindex="0">Январь 2022</li>
-										<li class="popup__month-item popup__month-item--active" tabindex="0">Февраль 2022</li>
+										<li class="popup__month-item" tabindex="0">Февраль 2022</li>
 										<li class="popup__month-item" tabindex="0"> Март 2022</li>
 										<li class="popup__month-item" tabindex="0">Апрель 2022</li>
 										<li class="popup__month-item" tabindex="0">Май 2022</li>
 									</ul>
 									<ul class="popup__days-list">
-										<li class="popup__day-item" tabindex="0">4.02 - 18.02</li>
-										<li class="popup__day-item" tabindex="0">7.02 - 21.02</li>
-										<li class="popup__day-item" tabindex="0">12.02 - 26.02</li>
-										<li class="popup__day-item" tabindex="0">20.02 - 6.03</li>
+										<li class="popup__days-item" tabindex="0">4.02 - 18.02</li>
+										<li class="popup__days-item" tabindex="0">7.02 - 21.02</li>
+										<li class="popup__days-item" tabindex="0">12.02 - 26.02</li>
+										<li class="popup__days-item" tabindex="0">20.02 - 6.03</li>
 									</ul>
 								</div>
-								<button class="popup__button btn">Готово</button>
+								<button class="popup__button popup__button--date btn">Готово</button>
 							</div>
 						</div>
 
@@ -281,7 +281,7 @@
 									<path d="M1.70538 4.29458C2.09466 3.90531 2.72569 3.90496 3.11538 4.29381L6.29366 7.46517C6.68401 7.85467 7.31599 7.85467 7.70634 7.46517L10.8846 4.29381C11.2743 3.90496 11.9053 3.90531 12.2946 4.29458C12.6842 4.68415 12.6842 5.31578 12.2946 5.70535L7.70711 10.2929C7.31658 10.6834 6.68342 10.6834 6.29289 10.2929L1.70538 5.70535C1.31581 5.31578 1.31581 4.68415 1.70538 4.29458Z" />
 								</svg>
 								<p class="price__title">Опции</p>
-								<p class="price__placeholder price__placeholder--people">Выбери нужные опции</p>
+								<p class="price__placeholder price__placeholder--options">Выбери нужные опции</p>
 							</div>
 							<div class="popup popup--options">
 								<h4 class="popup__title">Опции</h4>
@@ -291,7 +291,7 @@
 									<li class="popup__options-item" tabindex="0">Персональный гид</li>
 									<li class="popup__options-item" tabindex="0">Улучшенная палатка</li>
 								</ul>
-								<button class="popup__button btn">Готово</button>
+								<button class="popup__button  btn">Готово</button>
 							</div>
 						</div>
 						<button class="price__button btn">Узнать цену</button>
