--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
 				<p class="header__invite">Открой для себя</p>
 				<p class="header__indonesia">indonesia</p>
 				<p class="header__description">Тур 14 дней, покажем все самое интересное. <br> Вы точно запомните этот отдых навсегда.</p>
-				<a class="btn btn--reserv" href="#reserv">Забронировать</a>
+				<a class="btn btn--reserv" href="#reserve">Забронировать</a>
 			</div>
 		</div>
 	</header>
@@ -132,7 +132,7 @@
 								</h3>
 								<div>
 									<p class="accordion__text">
-										Свое путешествие мы начнем со столицы Индонезии – города Джаккарты. Она огромная, многоликая, многоголосая. В Центральном муниципалитете ждут известные достопримечательности, а в Северном — рестораны и рынки с морепродуктами. Западные районы хранят память о голландских колонизаторах а&nbsp;в&nbsp;восточных кипит современная промышленность. </p>
+										Свое путешествие мы начнем со столицы Индонезии – города Джаккарты. Она огромная, многоликая, многоголосая. В Центральном муниципалитете ждут известные достопримечательности, а в Северном — рестораны и рынки с&nbsp;морепродуктами. Западные районы хранят память о голландских колонизаторах а&nbsp;в&nbsp;восточных кипит современная промышленность. </p>
 								</div>
 							</li>
 							<li class="accordion__item">
@@ -302,38 +302,38 @@
 						<svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
-						<h3 class="why__title">Эксперты по&nbsp;Индонезии с&nbsp;2006&nbsp;года.</h3>
-						<p class="why__text">Уже 15&nbsp;лет мы&nbsp;открываем для всех желающих великолепные и&nbsp;загадочные острова Индонезии.</p>
+						<h3 class="why__title">Эксперты по Индонезии с&nbsp;2006&nbsp;года.</h3>
+						<p class="why__text">Уже 15 лет мы открываем для всех желающих великолепные и загадочные острова Индонезии.</p>
 					</li>
 					<li class="why__card"> <svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
 						<h3 class="why__title">У&nbsp;нас цена = качество.</h3>
-						<p class="why__text">Ценность наших туров невозможно переоценить. Мы&nbsp;показываем&nbsp;то, о&nbsp;чем другие могут только мечтать.</p>
+						<p class="why__text">Ценность наших туров невозможно переоценить. Мы показываем то, о чем другие могут только мечтать.</p>
 					</li>
 					<li class="why__card"> <svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
 						<h3 class="why__title">Поддержка 24/7.</h3>
-						<p class="why__text">Мы&nbsp;не&nbsp;бросаем наших туристов одних в&nbsp;диких местах, мы&nbsp;помогаем справляться со&nbsp;всеми сложностями, которые могут у&nbsp;вас возникнуть.</p>
+						<p class="why__text">Мы не бросаем наших туристов одних в диких местах, мы помогаем справляться со всеми сложностями, которые могут у вас возникнуть.</p>
 					</li>
 					<li class="why__card"> <svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
 						<h3 class="why__title">Медицинская помощь.</h3>
-						<p class="why__text">Вместе с&nbsp;нами в&nbsp;путешествие отправляются специалисты по&nbsp;оказанию экстренной медицинской помощи. </p>
+						<p class="why__text">Вместе с нами в путешествие отправляются специалисты по&nbsp;оказанию экстренной медицинской помощи. </p>
 					</li>
 					<li class="why__card"> <svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
 						<h3 class="why__title">Помощь с&nbsp;детьми.</h3>
-						<p class="why__text">Мы&nbsp;предоставим вам профессиональную няню, которая присмотрит за&nbsp;вашим чадом в&nbsp;часы вашего отсутствия.</p>
+						<p class="why__text">Мы&nbsp;предоставим вам профессиональную няню, которая присмотрит за&nbsp;вашим чадом в&nbsp;часы&nbsp;вашего отсутствия.</p>
 					</li>
 					<li class="why__card"> <svg class="why__icon" width="44.000000" height="44.000000" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<circle cx="22.000000" cy="22.000000" r="22.000000" fill="#FCB500" fill-opacity="1.000000" />
 						</svg>
 						<h3 class="why__title">Национальная кухня.</h3>
-						<p class="why__text">Вы&nbsp;узнаете на&nbsp;вкус чем&nbsp;отличается тумпенг от&nbsp;наси горенга и&nbsp;попробуете настоящий индонезийский суп бунтут.</p>
+						<p class="why__text">Выузнаете на вкус чем&nbsp;отличается тумпенг от&nbsp;наси горенга и попробуете настоящий индонезийский суп бунтут.</p>
 					</li>
 				</ul>
 			</div>
